<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt" >
    </TextView>

    <EditText
        android:id="@+id/genre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextViewTitle"
        android:layout_below="@+id/TextViewTitle"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/genre"
        android:imeOptions="actionSend"
        android:inputType="text" />

    <Button
        android:id="@+id/ButtonSendFeedback"
        style="@style/AppBaseTheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/ButtonSendFeedback"
        android:layout_marginBottom="37dp"
        android:onClick="sendFeedback"
        android:text="@string/submit" />

    <EditText
        android:id="@+id/zipcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ButtonSendFeedback"
        android:layout_alignLeft="@+id/ButtonSendFeedback"
        android:layout_alignRight="@+id/ButtonSendFeedback"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/zipcode"
        android:inputType="text" />

    <EditText
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/genre"
        android:layout_alignRight="@+id/genre"
        android:layout_below="@+id/genre"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/rating"
        android:inputType="text" />

    <EditText
        android:id="@+id/da"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rating"
        android:layout_alignRight="@+id/zipcode"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/da" >

        <requestFocus />
    </EditText>

</RelativeLayout>